# netgame

./: .gitlab-ci.yml  CMakeLists.txt  travis.yml
include/: Animation.h  AssetManager.h  Game.h  Scene.h
include/scenes/: GameScene.h  StartScene.h
src/: Animation.cpp  AssetManager.cpp  Game.cpp  main.cpp
src/scenes/: GameScene.cpp  StartScene.cpp
